[DND] Drag and drop works now